Fix icon issue on mobile

--- a/src/components/Navibar.vue.css
+++ b/src/components/Navibar.vue.css
@@ -37,13 +37,16 @@
     width: 96%;
 }
 
+#home {
+    transition: all 0.5s;
+}
+
 #logo {
     position: absolute;
     width: 28px;
     height: 28px;
     margin: 10px 0;
     background: url('/static/images/icon/logo1.svg') no-repeat center;
-    transition: all 0.5s;
     background-size: 100%;
 }
 
